; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/harfbuzz/test/api/extr_test-font.c_test_fontfuncs_nil.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/harfbuzz/test/api/extr_test-font.c_test_fontfuncs_nil.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_fontfuncs_nil to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_fontfuncs_nil() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32* (...) @hb_font_funcs_create()
  store i32* %2, i32** %1, align 8
  %3 = load i32*, i32** %1, align 8
  %4 = call i32 @hb_font_funcs_is_immutable(i32* %3)
  %5 = icmp ne i32 %4, 0
  %6 = xor i1 %5, true
  %7 = zext i1 %6 to i32
  %8 = call i32 @g_assert(i32 %7)
  %9 = call i32 (...) @hb_font_funcs_get_empty()
  %10 = call i32 @_test_fontfuncs_nil(i32 %9)
  %11 = load i32*, i32** %1, align 8
  %12 = call i32 @hb_font_funcs_destroy(i32* %11)
  ret void
}

declare dso_local i32* @hb_font_funcs_create(...) #1

declare dso_local i32 @g_assert(i32) #1

declare dso_local i32 @hb_font_funcs_is_immutable(i32*) #1

declare dso_local i32 @_test_fontfuncs_nil(i32) #1

declare dso_local i32 @hb_font_funcs_get_empty(...) #1

declare dso_local i32 @hb_font_funcs_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
